fix: java 8 replace isBlank to trim.isEmpty